# 8080

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml  style-enforcement.yml
debug/: 8080  CMakeCache.txt  CTestTestfile.cmake  Makefile  Tests  Tests[1]_include.cmake  Tests[1]_tests.cmake  cmake_install.cmake
debug/Testing/Temporary/: CTestCostData.txt
hardware/: README.md
hardware/basic/: CMakeLists.txt
hardware/basic/src/: hw_funcs.c
hardware/cpudiag/: CMakeLists.txt
hardware/cpudiag/src/: hw_funcs.c
hardware/none/: CMakeLists.txt
hardware/none/src/: hw_funcs.c
hardware/si/: CMakeLists.txt
hardware/si/include/: keystate_update.h  play_sound.h  rom_struct.h  screen.hpp  si_proms.c  si_proms.h  sound.h  update_keystates.h
hardware/si/proms/: a.out  array  array2  cv01.1  cv02.2  extractor.c  wav_extractor.c
hardware/si/src/: hw_funcs.c  keystate_update.cpp  mike_laser.c  mike_ufo.c  play_sound.cpp  proms.c  screen.cpp  sound.c  update_keystates.cpp
hardware/taito/: CMakeLists.txt
hardware/taito/include/: hw_lib_imports.h  proms.h  screen_timer.h  taitoScreen.hpp  taito_start.h  taito_start.hpp  taito_struct.h
hardware/taito/src/: .taitoScreen.cpp.swp  .taito_start.cpp.swp  dummy.cpp  interrupt_hook.c  screen_timer.c  taitoScreen.cpp  taito_start.cpp  taito_struct_ops.c
include/: cpu.h  cycle_timer.h  hw_func_pointers.h  hw_imports.h  opcode_array.h  opcode_decls.h  opcode_helpers.h  opcode_size.h  opcodes.h
roms/: README.md  balloon  balloon.mask  basic  cpudiag  cputest  exerciser  invaders_cv  invaders_cv.mask  lunar_rescue  lunar_rescue.mask  ozma
src/: arithmetic_opcodes.c  branch_opcodes.c  cpu_thread.c  cycle_timer.c  data_transfer_opcodes.c  hw_func_pointers.c  logical_opcodes.c  main.c  opcode_array.c  other_opcodes.c
test/: arithmetic_opcode_tests.cpp  branch_opcode_tests.cpp  data_opcode_tests.cpp  hw_funcs_tests.cpp  logical_opcode_tests.cpp  other_opcode_tests.cpp  test_main.cpp
